<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Matrimony</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    
    <!-- login -->
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    
    
    <!-- sign up -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_title">Sign Up For Free</string>
    <string name="email_hint">Email</string>
    <string name="fname_hint">First Name</string>
    <string name="lname_hint">Last Name</string>
    <string name="distric_hint">Distric</string>
    <string name="province_hint">Province</string>
    
    
    <!-- home -->
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="my_matches">My Matches</string>
    <string name="interests">Interests</string>
    <string name="daily_five">Daily 5</string>
    <string name="suprise_me">Surprise Me</string>
    <string name="upgrade">Upgrade Me</string>
    

</resources>
