<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_bg_gradient"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp" >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:text="@string/sign_up_title" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="@dimen/sign_up_feild_margin"
                android:hint="@string/email_hint"
                android:background="@drawable/text_background"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="@dimen/sign_up_feild_margin"
                android:hint="@string/username_hint"
                android:background="@drawable/text_background"
                android:inputType="none" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_marginTop="@dimen/sign_up_feild_margin"
                android:hint="@string/password_hint"
                android:background="@drawable/text_background"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginTop="@dimen/sign_up_feild_margin"
                android:hint="@string/fname_hint"
                android:background="@drawable/text_background"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fname"
                android:layout_marginTop="@dimen/sign_up_feild_margin"
                android:hint="@string/lname_hint"
                android:background="@drawable/text_background"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lname"
                android:background="@drawable/button_bg"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:text="@string/sign_up"
                 />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>