<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_image"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/transparent_white_bg" >

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="150dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/username"
            android:layout_alignTop="@+id/username"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_alignRight="@+id/password"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_btn_text_size"
            android:textStyle="bold" />
        
        
         <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_alignRight="@+id/password"
            android:layout_below="@+id/login_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_bg"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_btn_text_size"
            android:layout_margin="10dp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>